--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,16 @@
 
     <!-- Common margin value used throughout the app -->
     <dimen name="activity_margin">16dp</dimen>
+
+    <!-- Margins for the book values in list_item.xml -->
+    <dimen name="book_values_margin">5dp</dimen>
+
+    <!-- For the quantity edit field in activity_editor.xml -->
+    <dimen name="edit_quantity_margin_right">20dp</dimen>
+    <dimen name="edit_quantity_margin_end">20dp</dimen>
+    <dimen name="button_width">60dp</dimen>
+    <dimen name="button_margin_left">7dp</dimen>
+
+    <!-- For the order button -->
+    <dimen name="order_margin_top">100dp</dimen>
 </resources>
