--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#ad1457</color>
     <color name="colorPrimaryDark">#78002e</color>
     <color name="colorAccent">#e35183</color>
+    <color name="bookListItem">#aeb6bd</color>
 </resources>
